--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "ts-node src/index.ts",
+  "check:example": "ts-node src/index.ts test-project/example.tsx",
+  "build": "tsc",
+  "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
