--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "check": "ts-node src/index.ts",
-  "check:example": "ts-node src/index.ts test-project/example.tsx",
+  "check": "ts-node src/index.ts",
   "build": "tsc",
-  "dev": "ts-node src/index.ts"
-  },
+  "watch": "tsc --watch"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
