--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "check": "ts-node src/index.ts",
-  "build": "tsc",
-  "watch": "tsc --watch"
-},
+    "check": "ts-node src/index.ts",
+    "build": "tsc",
+    "watch": "ts-node src/index.ts --watch",
+    "test:db": "ts-node src/test-db.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/chokidar": "^1.7.5",
     "@types/node": "^24.3.0",
+    "@types/pg": "^8.15.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "chalk": "^5.6.0",
+    "chokidar": "^4.0.3",
+    "pg": "^8.16.3",
     "ts-morph": "^26.0.0",
     "zod": "^4.1.5"
   }
