Add ai-analyze command for npm global install
ai-analyze runs the FULL smart analyzer with all features:
- Issue bucketing (BLOCKERS/STRUCTURAL/COMPLIANCE)
- All validation rules
- Contract detection
- Context collection
- Creates fixes.json and context.json

Now works with: npm install -g git+https://github.com/rajatdhanda/ai-observer.git
Then just run: ai-analyze

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ai-observer",
   "version": "1.0.0",
   "bin": {
-    "ai-observe": "./bin/ai-observe"
+    "ai-observe": "./bin/ai-observe",
+    "ai-analyze": "./bin/ai-analyze"
   },
   "scripts": {
     "build": "tsc",
