Fix npx execution - add ai-observer as default bin command

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ai-observer",
   "version": "1.0.0",
+  "main": "./bin/ai-analyze",
   "bin": {
+    "ai-observer": "./bin/ai-analyze",
     "ai-observe": "./bin/ai-observe",
     "ai-analyze": "./bin/ai-analyze"
   },
