Simplify npm package - single entry point for npx
- Remove ai-observe binary (unused)
- Keep only ai-observer as the single bin entry
- This fixes npx execution from GitHub

Now 'npx github:rajatdhanda/ai-observer' will work correctly

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "./bin/ai-analyze",
   "bin": {
-    "ai-observer": "./bin/ai-analyze",
-    "ai-observe": "./bin/ai-observe",
-    "ai-analyze": "./bin/ai-analyze"
+    "ai-observer": "./bin/ai-analyze"
   },
   "scripts": {
     "build": "tsc",
