--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "typescript": "^5.9.2",
+    "ts-morph": "^26.0.0",
     "@types/express": "^5.0.3",
     "@types/js-yaml": "^4.0.9",
     "@types/ws": "^8.18.1",
@@ -49,7 +51,6 @@
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12",
-    "ts-morph": "^26.0.0",
     "ws": "^8.18.3",
     "zod": "^4.1.5"
   }
