Add automated asset copying to build process
- Updated npm build script to automatically copy HTML/CSS/JS files to dist
- Prevents recurring issue of forgetting to update dist folder
- Now one command (npm run build) handles everything
- Solves the src/dist sync problem that kept causing CTA and other features to not appear in NPX

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ai-observer": "./bin/ai-analyze"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy-assets",
+    "copy-assets": "cp -r src/dashboard/components dist/dashboard/ && cp src/dashboard/*.html dist/dashboard/ && cp src/dashboard/*.css dist/dashboard/ 2>/dev/null || true",
     "dashboard": "ts-node src/dashboard/index.ts",
     "dashboard:here": "ts-node src/dashboard/index.ts .",
     "dashboard:streax": "ts-node src/dashboard/index.ts test-projects/streax",
